clear project a little bit

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,14 @@
 ---
+// Short video https://cdn.sanity.io/files/8nn8fua5/production/c6fb986a862cbe643c40cbdd0318ebc495efb187.mp4
+// Long video https://cdn.sanity.io/files/8nn8fua5/production/4c749533161fc77c899a376ec6cd6da38973772f.mp4
 ---
 
 <header>
-  <h1>Hello astro</h1>
+  <video src="https://cdn.sanity.io/files/8nn8fua5/production/c6fb986a862cbe643c40cbdd0318ebc495efb187.mp4" autoplay>Hello astro</video>
 </header>
+<style>
+  video {
+    width: 100vw;
+    height: 100vh;
+  }
+</style>
