--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,31 +21,19 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
+	import '@fontsource-variable/hanken-grotesk';
 	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+	  --white: #f4f4f4
+    --pink: #f9cdcd
+    --black: #252422
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
+    font-family: 'Hanken Grotesk Variable', sans-serif;
+		background: var(--white);
 	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+	body {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
 	}
 </style>
