--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,16 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '../layouts/Layout.astro'
 import Header from '../components/Header.astro'
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title='Welcome to Astro.'>
 	<main>
-	  <Header></Header>	
+		<Header />
 	</main>
 </Layout>
 
 <style>
-	
+	main {
+		padding: 2rem;
+	}
 </style>
