add the background video to the header

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,6 +30,7 @@ const { title } = Astro.props;
 	html {
     font-family: 'Hanken Grotesk Variable', sans-serif;
 		background: var(--white);
+    scrollbar-gutter: stable;
 	}
 	body {
 		margin: 0;
