--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,24 @@
 ---
 // Short video https://cdn.sanity.io/files/8nn8fua5/production/c6fb986a862cbe643c40cbdd0318ebc495efb187.mp4
 // Long video https://cdn.sanity.io/files/8nn8fua5/production/4c749533161fc77c899a376ec6cd6da38973772f.mp4
+// 
 ---
 
 <header>
-  <video src="https://cdn.sanity.io/files/8nn8fua5/production/c6fb986a862cbe643c40cbdd0318ebc495efb187.mp4" autoplay>Hello astro</video>
+  <video src="https://cdn.sanity.io/files/8nn8fua5/production/c6fb986a862cbe643c40cbdd0318ebc495efb187.mp4" autoplay></video>
 </header>
 <style>
-  video {
+  header {
     width: 100vw;
     height: 100vh;
+    position: relative; 
+  }
+  video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 </style>
