make the right align for the navbar

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,15 @@
 ---
-import Layout from '../layouts/Layout.astro'
-import Header from '../components/Header.astro'
+import Layout from "../layouts/Layout.astro";
+import Header from "../components/Header.astro";
 ---
 
-<Layout title='Welcome to Astro.'>
-	<main>
-		<Header />
-	</main>
+<Layout title="Welcome to Astro.">
+  <main>
+    <Header />
+  </main>
 </Layout>
 <style>
-	
+  main {
+    overflow-x: hidden;
+  }
 </style>
