--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ import NavBar from "../components/NavBar.astro";
 </header>
 <style>
   header {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     position: relative;
   }
