--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -2,42 +2,63 @@
 import { Icon } from "astro-icon/components";
 ---
 
-<nav>
-  <Icon name="logo" />
-  <ul>
-    <li>
-      <a href="">work</a>
-    </li>
-    <li>
-      <a href="">about</a>
-    </li>
-    <li>
-      <a href="">news</a>
-    </li>
-    <li>
-      <a href="">thinking</a>
-    </li>
-    <li>
-      <a href="">carrers</a>
-    </li>
-    <li>
-      <a href="">contact</a>
-    </li>
-  </ul>
-  <Icon name="points" />
-</nav>
+<div>
+  <nav>
+    <Icon name="logo" />
+    <ul>
+      <li>
+        <a href="">work</a>
+      </li>
+      <li>
+        <a href="">about</a>
+      </li>
+      <li>
+        <a href="">news</a>
+      </li>
+      <li>
+        <a href="">thinking</a>
+      </li>
+      <li>
+        <a href="">carrers</a>
+      </li>
+      <li>
+        <a href="">contact</a>
+      </li>
+    </ul>
+    <Icon name="points" />
+  </nav>
+</div>
 
 <style>
-  nav {
+  div {
     width: 100%;
-    color: white;
     position: absolute;
     top: 0;
     left: 0;
+  }
+
+  nav {
+    color: white;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding-inline: 2rem;
+    padding-block: 2rem;
   }
+
   ul {
+    list-style-type: none;
     display: flex;
+    gap: 2rem;
+
+    li {
+      font-size: 1rem;
+      text-transform: uppercase;
+    }
+
+    a {
+      all: unset;
+      cursor: pointer;
+    }
   }
 </style>
