make the link component

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ import NavBar from "../components/NavBar.astro";
 <header>
   <video
     src="https://cdn.sanity.io/files/8nn8fua5/production/c6fb986a862cbe643c40cbdd0318ebc495efb187.mp4"
-    autoplay
+    muted
     loop></video>
   <NavBar />
 </header>
