--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -5,7 +5,7 @@ import NavLink from "../components/NavLink.astro";
 
 <div>
   <nav>
-    <Icon name="logo" />
+    <Icon name="logo" width={200} height={40} />
     <ul>
       <li>
         <NavLink location="" text="work" />
@@ -26,7 +26,7 @@ import NavLink from "../components/NavLink.astro";
         <NavLink location="" text="contact" />
       </li>
     </ul>
-    <Icon name="points" />
+    <Icon name="points" width={40} height={10} />
   </nav>
 </div>
 
