--- a/src/components/AwardCard.astro
+++ b/src/components/AwardCard.astro
@@ -10,14 +10,29 @@ const { logoName, text } = Astro.props;
 ---
 
 <div class="award-card">
-  <Icon name={`${logoName}`} />
-  <p>Name example</p>
+  <Icon name={`${logoName}`} width={180} height={180} />
+  <p>{text}</p>
 </div>
 
 <style>
+  [data-icon] {
+    transition: transform 0.3s ease-in-out;
+  }
   .award-card {
     display: flex;
     flex-direction: column;
     align-items: center;
+    cursor: pointer;
+  }
+  .award-card:hover p {
+    text-decoration: underline;
+  }
+  .award-card:hover [data-icon] {
+    transform: scale(1.1);
+  }
+  p {
+    text-transform: uppercase;
+    max-width: 250px;
+    text-align: center;
   }
 </style>
