--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,12 +13,18 @@ import NavBar from "../components/NavBar.astro";
       class="video"></video>
     <div class="custom-cursor"></div>
   </div>
-  <NavBar />
+  <div class="nav-container">
+    <NavBar />
+  </div>
 </header>
 <style>
   header {
     width: 100%;
     height: 100%;
+    position: relative;
+  }
+  .cursor-container {
+    height: 100vh;
     position: relative;
   }
   video {
@@ -29,18 +35,25 @@ import NavBar from "../components/NavBar.astro";
     height: 100%;
     object-fit: cover;
   }
-  .cursor-container {
-    height: 100vh;
-    position: relative;
-  }
   .custom-cursor {
-    width: 40px;
-    height: 40px;
+    --cursorDimension: 7rem;
+    width: var(--cursorDimension);
+    height: var(--cursorDimension);
     border-radius: 50%;
-    background-color: red;
+    background-color: white;
     position: absolute;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
-    display: none;
+    transition:
+      top 0.5s ease,
+      left 0.5s ease;
+  }
+  .nav-container {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 </style>
 <script>
@@ -49,6 +62,9 @@ import NavBar from "../components/NavBar.astro";
   ) as HTMLDivElement;
   const customCursor = document.querySelector(
     ".custom-cursor",
+  ) as HTMLDivElement;
+  const navContainer = document.querySelector(
+    ".nav-container",
   ) as HTMLDivElement;
 
   const updateCursor = (event: MouseEvent) => {
@@ -59,34 +75,32 @@ import NavBar from "../components/NavBar.astro";
     const x = event.clientX - rect.left;
     const y = event.clientY - rect.top;
 
+    const cursorDiff = customCursor.offsetHeight / 2;
+
     const isInContainer =
       event.clientX >= rect.left &&
       event.clientX <= rect.right &&
-      event.clientY >= rect.top &&
-      event.clientY <= rect.bottom;
+      event.clientY >= rect.top + (cursorDiff + navContainer?.offsetHeight) &&
+      event.clientY <= rect.bottom - cursorDiff;
 
     if (isInContainer) {
+      customCursor.style.transitionDuration = "0s";
       // Update the position of the custom cursor
       customCursor.style.left = `${x}px`;
       customCursor.style.top = `${y}px`;
     } else {
-      customCursor.style.display = "none";
+      customCursor.style.transitionDuration = "0.4s";
     }
-  };
-  const showCursor = () => {
-    customCursor.style.display = "block";
   };
 
   const hideCursor = () => {
-    customCursor.style.display = "none";
+    customCursor.style.left = "50%";
+    customCursor.style.top = "50%";
   };
-
-  const centerCursor = () => {};
 
   document.addEventListener("DOMContentLoaded", () => {
     if (!containerElement) return;
 
-    containerElement.addEventListener("mouseenter", showCursor);
     containerElement.addEventListener("mouseleave", hideCursor);
     containerElement.addEventListener("mousemove", updateCursor);
   });
