--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,9 +14,7 @@ import { Icon } from "astro-icon/components";
       class="video"></video>
     <div class="custom-cursor">
       <span>Watch<br />Reel</span>
-      <span>
-        <Icon name="logo" width={100} height={40} />
-      </span>
+      <span>BASIC/DEPT® <br /> 2010-∞</span>
     </div>
   </div>
   <div class="nav-container">
@@ -68,9 +66,12 @@ import { Icon } from "astro-icon/components";
     span:last-child {
       color: white;
       position: absolute;
-      transform: translate(-50%, 140%);
+      transform: translate(-50%, 220%);
       top: 50%;
       left: 50%;
+      text-align: center;
+      font-weight: bold;
+      font-size: 0.9rem;
     }
   }
   .nav-container {
