delete unused import

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,10 @@ const logos = [
         ))
       }
     </section>
-    <section class="work-section"></section>
+    <section class="work-section">
+      <div class="work-header"></div>
+      <div class="work-display"></div>
+    </section>
   </main>
 </Layout>
 <style>
