--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -91,6 +91,9 @@ import NavBar from "../components/NavBar.astro";
     ".nav-container",
   ) as HTMLDivElement;
 
+  // Hide cursor
+  customCursor.style.cursor = "none";
+
   const updateCursor = (event: MouseEvent) => {
     if (!containerElement || !customCursor) return;
 
